--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-API_URL=https://rti-informationdispersal-system.onrender.com
+VITE_API_URL=https://rti-informationdispersal-system.onrender.com
 FRONTEND_URL=https://rti-information-dispersal-system.vercel.app
